css/style.css
:root {
	--background: #11152d;
	--card_background: #2f2f49;
	--menu_background: #333349;
	--tooltip_background: #414149;
	--menu_buttons_background: #616179;
	--foreground: white;
	--forms: #5f5f6f;
	--red: #ffa1a7;
	--blue: #9ccdf9;
	--green: #7de384;
	--purple: #bd93ff;
	--faded: #ccc;
	--links: lightblue;
	--ahover: #ccaaff;
	--default_margin_padding: .5em;
	--table_padding: .25em .5em;
	scrollbar-color: var(--menu_background) var(--forms);
	.tippy-content {
		border: 2px solid var(--foreground);
	}
 }

html {
	scrollbar-gutter: stable;
}

body {
	background: var(--background);
	color: var(--foreground);
	font-family: sans-serif;
	margin: 0 auto;
	min-width: 95%;
	max-width: 1600px;
	min-height: 100dvh;
	display: flex;
	flex-direction: column;
}
a {
	color: var(--links);
}
a:hover {
	color: var(--ahover);
}
li {
	list-style: square;
}
select, button, textarea {
	background-color: var(--forms);
	color: var(--foreground);
	box-shadow: 0 .1em .3em rgba(0, 0, 0, .9);
	border-radius: 5px;
	border: 0px;
}
select, button {
	padding: var(--default_margin_padding);
}
select {
	/* let us style <select> on webkit browsers */
	-webkit-appearance: none;
}
summary {
	list-style: none;
}
summary::-webkit-details-marker {
	display: none;
}
#main-container {
	flex: 1;
}
#temporary-message, .card {
	background: var(--card_background);
	border-radius: 5px;
	padding: var(--default_margin_padding);
	margin: var(--default_margin_padding);
}
#menu, #footer {
	text-align: center;
	background-color: var(--menu_background);
	min-height: 3.2em;
}
#menu {
	/* override .card */
	padding: 0 var(--default_margin_padding);
}
#menu-cortlogo-svg {
	border-radius: 5px;
	box-shadow: 0 .1em .3em rgba(0, 0, 0, .9);
}
#menu-desktop-cortlogo {
	display: inline-block;
	height: 3em;
	width: 3em;
	border-radius: 5px;
	/* disable inheritance from menuitem */
	background: unset;
	box-shadow: unset;
}
#footer {
	min-height: 7.5em;
}
#menu-click, #menu-mobile {
	display: none;
}
#menu-links {
	padding-left:0px;
	margin: 0px;
	display: flex;
	justify-content: center;
	align-items: stretch;
	flex-wrap: wrap;
	align-items: center;
}
#menu-links > li {
	list-style: none;
	display: inline-block;
	margin: 0 .2em;
	flex-grow: 1;
}
#menu-bosses[menu-status="true"] {
	color: var(--red);
}
#menu-bz[menu-status="true"] {
	color: var(--green);
}
.menu-icon {
	height: 1em;
	width: 1em;
	display: inline-block;
	vertical-align: middle;
}
.menu-btn {
	color: var(--foreground);
	display: none;
	width: 100%;
}
.menuitem > a, .menudetails {
	background: var(--menu_buttons_background);
	text-decoration: none;
	color: var(--foreground);
	display: block;
	padding: var(--default_margin_padding);
	border-radius: 5px;
	box-shadow: 0 .1em .3em rgba(0, 0, 0, .9);
}
.menudetails ul {
	margin-top: .75em;
	position: absolute;
	background: var(--background);
	border: 1px solid var(--foreground);
	box-shadow: none;
}
.menudetails li, .menudetails ul {
	list-style-type: none;
	padding: .5em;
	margin-left: -.5em;
	text-align: left;
}
.menuitem > a:hover {
	background: var(--card_background);
	color: var(--ahover);
	box-shadow: 0 .1em .3em rgba(200, 200, 200, .9);
}
#footer {
	margin-top: 2em;
}
#footer-options {
	display: flex;
	margin: 0 auto;
	justify-content: space-evenly;
	flex-wrap: wrap;
	gap: 2em;
	padding-bottom: var(--default_margin_padding);
	width: fit-content;
	background: var(--background);
}
#tz, #colorscheme {
	display: inline-grid;
	grid-template-columns: 1fr auto;
	align-items: center;
}
#tztitle, #colorschemetitle {
	text-align: left;
	font-weight: bold;
}
#tz select, #colorscheme select {
	min-width: 25ch;
}
h1 {
	text-align: center;
	font-size: 2rem;
}
h3 {
	padding-top: 0;
	margin-top: var(--default_margin_padding);
}
#titleinfo {
	text-align: center;
	margin-top: 1em;
	margin-bottom: 1em;
	min-height: 3em;
}
#temporary-message {
	text-align: center;
	font-weight: bold;
	color: black;
}
#temporary-message a {
	color: white;
}

.red { color: var(--red); }
.blue { color: var(--blue); }
.green { color: var(--green); }
.purple { color: var(--purple); }
.faded { color: var(--faded); }
.center { text-align:center; }
.bold { font-weight: bold; }
.italic { font-style: italic; }
.nodeco { text-decoration: none; }
.small { font-size: 90% }

@media (min-width: 800px) and (max-width: 1200px) {
	#menu-links {
		padding-bottom: var(--default_margin_padding);
	}
	/* align with second row's first item */
	.menu-desktop {
		margin: 0 !important;
	}
	/* align with second row's first item */
	#menu-desktop-cortlogo {
		padding-left:0 !important;
	}
}

@media (max-width: 799px) {
	#menu {
		line-height: 2em;
		text-align: left;
		min-height: calc(2em + var(--default_margin_padding));
		padding: var(--default_margin_padding);
	}
	#menu, #footer {
		box-shadow: 0px 0px 2px 2px rgba(200, 200, 200, .4);
	}
	#menu-desktop-cortlogo {
		display: none;
	}
	#menu-links {
		width: 100%;
		display: block;
		margin-top: var(--default_margin_padding);
	}
	#menu-click:not(:checked) ~ ul { display: none; }
	#menu-click:checked ~ ul { display: block; }
	#menu-links > li {
		display: block;
		padding: calc(var(--default_margin_padding) / 2);
	}
	#menu-mobile {
		font-size: 125%;
		display: flex;
		align-items: center;
	}
	#menu-mobile-cortlogo {
		display: inline-block;
		height: 2em;
		width: 2em;
		margin-right: var(--default_margin_padding);
		margin-left: .17em;
		border-radius: 5px;
	}
	.menu-btn {
		display: inline-block;
	}
	#tz, #colorscheme {
		grid-template-columns: 1fr 1fr;
	}
	.menudetails ul {
		position: relative;
		margin-left: 0;
		background: var(--background);
	}
	#menu-lang-list {
		display: flex;
		justify-content: space-around;
	}
}

:root[data-prefers-colorscheme="Syrtis"] {
	--background: #14281f;
	--card_background: #203d31;
	--menu_background: #2a4a3c;
	--tooltip_background: #253525;
	--menu_buttons_background: #58786a;
	--foreground: white;
	--forms: #4f8061;
	--links : #b4ffa1;
	#t-points {
		background: var(--menu_background) !important;
	}
	#menu-bz[menu-status="true"] {
		color: #60ff6b;
	}
}

:root[data-prefers-colorscheme="Alsius"] {
	--background: #00192e;
	--card_background: #20324b;
	--menu_background: #01304a;
	--tooltip_background: #303545;
	--menu_buttons_background: #26577d;
	--foreground: white;
	--forms: #406683;
        #t-points {
                background: var(--menu_background) !important;
        }
}

:root[data-prefers-colorscheme="Ignis"] {
	--background: #050101;
	--card_background: #340606;
	--menu_background: #2a0808;
	--tooltip_background: #150909;
	--menu_buttons_background: #852424;
	--foreground: white;
	--forms: #6e1e1e;
	--links: #ffdcc3;
	scrollbar-color: var(--menu_background) var(--forms);
        #t-points {
                background: var(--menu_background) !important;
        }
	#t-load {
		border: 3px solid #ff000088;
	}
}

:root[data-prefers-colorscheme="Light"] {
	--background: ghostwhite;
	--card_background: floralwhite;
	--menu_background: antiquewhite;
	--tooltip_background: lightyellow;
	--menu_buttons_background: #fff;
	--foreground: black;
	--forms: #e5e5e5;
	--red: #cc0000;
	--blue: #0364a5;
	--green: #008700;
	--purple: purple;
	--faded: #525252;
	--links: blue;
	--ahover: purple;

	scrollbar-color: initial;

	.wz-forts svg, .wz-gems svg, .wz-relics svg {
		filter: brightness(.6) saturate(1.5);
	}
	#t-points {
		background: #f8f8fe !important;
	}
	#t-trainer .icon[data-status="available"] {
		filter: brightness(.45);
	}
	#ts-powergraph-graph svg {
		background: var(--card_background) !important;
	}
	.tippy-content, .card:not(#wz-map), .menudetails {
		box-shadow: 0 .1em .3em rgba(0, 0, 0, .9) !important;
	}
}

